# umni-c1-frontend

./: .env  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
server/app/Enums/: EspRestartReasonEnum.php
server/app/Models/: Input.php  Nvs.php  OneWireSensor.php  Relay.php
server/database/migrations/: 2025_01_22_183008_create_relays_table.php  2025_01_22_183014_create_inputs_table.php  2025_01_22_183023_create_configs_table.php  2025_01_22_183511_create_nvs_table.php  2025_01_24_174252_add_labels_to_dio.php  2025_01_27_065456_create_one_wire_sensors_table.php
server/database/seeders/: OneWireSeeder.php
server/routes/: web.php
src/: App.vue  i18n.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/assets/: main.css  variables.scss
src/components/: AddDeviceModal.vue  InputsPanel.vue
src/components/chunks/: AdcConf.vue  AdcConfCard.vue  AutomationMatrix.vue  AutomationsSelect.vue  BoilerError.vue  ConfirmationDialog.vue  DebugCard.vue  DebugSwitcher.vue  DeviceItem.vue  FeatureCard.vue  InputPort.vue  ModalDialog.vue  NavigationPanel.vue  NtcConf.vue  NtcConfCard.vue  OpenThermComponent.vue  OpencollectorsPanel.vue  OutputPort.vue  (+9 more)
src/fonts/: GardensC.eot  gardensc.css
src/helpers/: chartOptions.js  chipInfo.js  dateToStringDateTime.js  debounce.js  notificationHelper.js  resetReason.js
src/locales/: ru.json
src/router/: index.js
src/store/: actions.js  getters.js  mutations.js  state.js  store.js
(+36 files in other folders)
